manifests/alt/gophie_web_alt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gophie-web-alt
  labels:
    app: gophie-web-alt
  namespace: gophie 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gophie-web-alt
  template:
    metadata:
      labels:
        app: gophie-web-alt
    spec:
      containers:
      - name: gophie-web-alt 
        image: bethelm/bisohns:gophie-web-altV2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000



---
apiVersion: v1
kind: Service
metadata:
  name: gophie-web-alt-service 
  namespace: gophie
spec:
  type: ClusterIP
  selector:
    app: gophie-web-alt 
  ports:
  - port: 80 
    targetPort: 3000
