manifests/alt/oc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oce
  namespace: gophie
spec:
  selector:
    matchLabels:
      app: oce
  template:
    metadata:
      labels:
        app: oce
    spec:
      containers:
      - name: oce
        image: ghcr.io/go-phie/ocena:v2 
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: oce-service
  namespace: gophie 
spec:
  type: ClusterIP 
  selector:
    app: oce
  ports:
  - port: 80
    targetPort: 8000
